plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.myweb'
version = '0.0.1-SNAPSHOT'
description = 'first backend project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	querydslVersion = '5.0.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'software.amazon.awssdk:s3:2.25.0'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'
	
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	implementation 'com.github.scribejava:scribejava-apis:8.3.3'
	implementation 'com.github.scribejava:scribejava-core:8.3.3'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

	implementation 'com.googlecode.json-simple:json-simple:1.1.1'

	implementation 'org.springframework.boot:spring-boot-starter-tomcat'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'com.sun.mail:jakarta.mail:2.0.1'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('cleanIdeBin') {
	doLast {
		File ideBin = file('bin')
		if (!ideBin.exists()) {
			return
		}
		try {
			project.delete(ideBin)
		} catch (Exception ex) {
			logger.warn("Skipping bin cleanup because files are locked by IDE: ${ex.message}")
		}
	}
}

tasks.named('compileJava') {
	dependsOn tasks.named('cleanIdeBin')
}

tasks.named('bootRun') {
	dependsOn tasks.named('cleanIdeBin')
}

springBoot {
	mainClass = 'org.myweb.uniplace.Application'
}
